1、添加自动添加Entry入口及自动配置HtmlWebpackPlugin功能 2、更新README.md文件 3、修改项目目录结构

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
   <div class="foot"></div>
   <span class="button">按钮1</span>
   <img src="img/test.png">
-  #include("./part.html")
+  #include("./components/part.html")
 </body>
 </html>
